[package]
name = "test-web-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.1"
wasm-bindgen = "0.2.83"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
math_lib = { git = "https://github.com/KDmasterLOL/math_lib.git", branch = "master", version="0.1.1"}
